--- a/site/src/views/users/editProfile.ejs
+++ b/site/src/views/users/editProfile.ejs
@@ -59,7 +59,7 @@
                                 <div class="input-flex">
                                     <label for="">DNI: </label>
                                     <input class="input-style" type="number" name="dni" placeholder="DNI"
-                                        value="<%= user.dni ? user.dni : "------" %>">
+                                        value="<%= user.dni ? user.dni : "" %>">
                                 </div>
                             </div>
                         </div>
@@ -69,7 +69,7 @@
                                 <div class="input-flex">
                                     <label for="">Teléfono: </label>
                                     <input class="input-style" type="tel" name="tel" placeholder="Teléfono"
-                                        value="<%= user.tel ? user.tel : "------" %>">
+                                        value="<%= user.tel ? user.tel : "" %>">
                                 </div>
                             </div>
                             <div class="input-container">
@@ -102,7 +102,7 @@
                                 <div class="input-flex">
                                     <label for="">Dirección: </label>
                                     <input class="input-style" type="text" name="street" placeholder="Direccion"
-                                        value="<%= user.street ? user.street : "-------" %>">
+                                        value="<%= user.street ? user.street : "" %>">
                                 </div>
                             </div>
                         </div>
