--- a/site/src/views/partials/cards.ejs
+++ b/site/src/views/partials/cards.ejs
@@ -10,8 +10,7 @@
             </div>
             <div class="descripcionimp">
                 <h2><%= product.productName %></h2>
-                <p>$ <%-product.price - product.price * product.discount / 100 %><b></b>
-                    <span id="off"><%- product.discount !== 0 ? `${product.discount}% OFF` : "" %></p>                    
+                <p>$ <%-product.price - product.price * product.discount / 100 %><b></b><span id="off"><%- product.discount %> % OFF </span>Antes $<del id='delete'><%- product.price %> </del></p>                    
             </div>
             <div class="button-group">
                 <a href="/product/productDetail/<%= product.id %>" class="detalles">Ver detalles</a>
@@ -23,7 +22,7 @@
                 <a href=""><i class="fas fa-star"></i></a>                
                 <a href=""><i class="fas fa-star"></i></a>
                 <a href=""><i class="fas fa-star-half-alt"></i></a>
-            </div>    
+            </div>     
         </div>
         <% }) %>
         
