funcionalidad de suscripcion y de formulario de contacto cambios nulos en productDetail y indexcontroller

--- a/site/src/views/contacto.ejs
+++ b/site/src/views/contacto.ejs
@@ -14,11 +14,11 @@
               <h3 class="con">Escríbenos y en breve nos pondremos en contacto</h3>
       
       
-                <form class="contacto" action ="submeter-formulario.php" method="post">       
+                <form class="contacto" action ="https://formsubmit.co/mimperiosuscrip@gmail.com" method="post">       
       
                   
                       <p class="con">
-                        <label for="nombre" class="colocar_nombre">Nombre
+                        <label for="name" class="colocar_nombre">Nombre
                           <span class="obligatorio">*</span>
                         </label>
                           <input class="inputcontacto" type="text" name="introducir_nombre" id="nombre" required="obligatorio" placeholder="Escribe tu nombre">
@@ -32,20 +32,20 @@
                       </p>
                   
                       <p class="con">
-                        <label for="telefone" class="colocar_telefono">Teléfono
+                        <label for="name" class="colocar_telefono">Teléfono
                         </label>
                           <input class="inputcontacto" type="tel" name="introducir_telefono" id="telefono" placeholder="Escribe tu teléfono">
                       </p>    
                     
                       <p class="con">
-                        <label for="asunto" class="colocar_asunto">Asunto
+                        <label for="name" class="colocar_asunto">Asunto
                           <span class="obligatorio">*</span>
                         </label>
                           <input class="inputcontacto" type="text" name="introducir_asunto" id="assunto" required="obligatorio" placeholder="Escribe un asunto">
                       </p>    
                     
                       <p class="con">
-                        <label for="mensaje" class="colocar_mensaje">Mensaje
+                        <label for="name" class="colocar_mensaje">Mensaje
                           <span class="obligatorio">*</span>
                         </label>                     
                                           <textarea name="introducir_mensaje" class="texto_mensaje" id="mensaje" required="obligatorio" placeholder="Deja aquí tu comentario..."></textarea> 
