--- a/site/src/views/partials/footer.ejs
+++ b/site/src/views/partials/footer.ejs
@@ -28,8 +28,9 @@
         </div>
         <div class="right box">
             <div class="topic">Te encantan nuestras ofertas? Suscribite</div>
-            <form action="#">
-                <input type="email" placeholder="Ingresa tu mail" required>
+            <form action="https://formsubmit.co/mimperiosuscrip@gmail.com" method="POST">   
+                     
+                <input type="email" name="email" placeholder="Ingresa tu mail" required>
                 <input type="submit" name="" value="Suscribir">
                 <div class="media-icons">
                     <a href="http://www.facebook.com" target="_blank"><i class="fab fa-facebook-f"></i></a>
