cargo vistas de categorias, codigo modo frankestein, detalles a mejorar

--- a/site/src/views/partials/header.ejs
+++ b/site/src/views/partials/header.ejs
@@ -19,22 +19,22 @@
       <!-- elementos del menu (categorias) -->
       <ul class="menu">
         <li class="dropdown-menu" onclick="dropSubCategoryMenu(`cocina`)">
-          <a href="#">COCINA</a> 
+          <a href="/cocina">COCINA</a> 
           
         </li>
         <li class="dropdown-menu" onclick="dropSubCategoryMenu(`comedor`)">
-          <a href="#">COMEDOR</a> 
+          <a href="/comedor">COMEDOR</a> 
           
         </li>
         <li class="dropdown-menu" onclick="dropSubCategoryMenu(`dormitorio`)">
-          <a href="#">DORMITORIO</a> 
+          <a href="/dormitorio">DORMITORIO</a> 
           
         <li class="dropdown-menu" onclick="dropSubCategoryMenu(`living`)">
-          <a href="#">LIVING</a> 
+          <a href="/living">LIVING</a> 
           
         <li class="dropdown-menu" onclick="dropSubCategoryMenu(`oficina`)">
           
-          <a href="#">OFICINA</a>
+          <a href="/oficina">OFICINA</a>
         </li>
       </ul>
 
@@ -45,22 +45,22 @@
       <!--elementos del menu (categorias)-->
       <ul class="menu">
         <li class="dropdown-menu" onclick="dropSubCategoryMenu(`cocina`)">
-          <a href="#">COCINA</a> 
+          <a href="/cocina">COCINA</a> 
           
         </li>
         <li class="dropdown-menu" onclick="dropSubCategoryMenu(`comedor`)">
-          <a href="#">COMEDOR</a> 
+          <a href="/comedor">COMEDOR</a> 
           
         </li>
         <li class="dropdown-menu" onclick="dropSubCategoryMenu(`dormitorio`)">
-          <a href="#">DORMITORIO</a> 
+          <a href="/dormitorio">DORMITORIO</a> 
           
         <li class="dropdown-menu" onclick="dropSubCategoryMenu(`living`)">
-          <a href="#">LIVING</a> 
+          <a href="/living">LIVING</a> 
           
         <li class="dropdown-menu" onclick="dropSubCategoryMenu(`oficina`)">
           
-          <a href="#">OFICINA</a>
+          <a href="/oficina">OFICINA</a>
         </li>
 
       </ul>
