cargo funcionalidad titulos dinamicos

--- a/site/src/views/partials/cards.ejs
+++ b/site/src/views/partials/cards.ejs
@@ -1,7 +1,7 @@
 <div class="section-cardsimperio1">
     <div class="cardsnproduct">
         <div class="nuevos-productos">
-            <h1>Productos Destacados</h1>
+            <h1><%= sliderTitle %></h1>
         </div>
         <% sliderProducts.forEach(product => { %> 
         <div class="cardimp"> 
