--- a/site/src/views/admin/adminCreate.ejs
+++ b/site/src/views/admin/adminCreate.ejs
@@ -74,7 +74,8 @@
                             <label>Imagenes del producto</label>
                             <input type="file" name="imgProduct" accept=".jpg, .jpeg, .png" multiple>
                         </div>
-                        <div class="button-form">
+                        <div class="button-crear">
+                            <button type="submit"><a href="/admin/products">Cancelar</a></button>
                             <button type="submit">Crear</button>
                         </div>
                     </form>
