--- a/site/public/css/cards.css
+++ b/site/public/css/cards.css
@@ -145,3 +145,21 @@
     padding: 0px 3px;
     font-size: 18px;
 }
+.descripcionimp p {
+    animation-duration: 3s;
+    animation-name: slidein;
+    animation-iteration-count: infinite;
+    animation-direction: alternate;
+  }
+  
+  @keyframes slidein {
+    from {
+      margin-left: 8%;
+      width: 100%
+    }
+  
+    to {
+      margin-left: -32%;
+      width: 150%;
+    }
+  }
