arreglo validacion editproduct back kend

--- a/site/src/views/partials/footer.ejs
+++ b/site/src/views/partials/footer.ejs
@@ -14,17 +14,22 @@
                     <a href="#"><i class="fas fa-phone-volume"></i>+54 11xxxxxxx</a>
                 </div>
                 <div class="email">
-                    <a href="#"><i class="fas fa-envelope"></i>MuebleriaImperio@gmail.com</a>
+                    <a href="#"><i class="fas fa-envelope"></i>mimperiosuscrip@gmail.com</a>
                 </div>
             </div>
         </div>
         <div class="middle box">
             <div class="topic">Productos</div>
-            <div><a href="#">Cocina</a></div>
-            <div><a href="#">Comedor</a></div>
-            <div><a href="#">Dormitorio</a></div>
-            <div><a href="#">Living</a></div>
-            <div><a href="#">Oficina</a></div>
+            <div><li class="dropdown-menu" onclick="dropSubCategoryMenu(`cocina`)">
+                <a href="/cocina">cocina</a> </div>
+            <div><li class="dropdown-menu" onclick="dropSubCategoryMenu(`comedor`)">
+                <a href="/comedor">comedor</a></div>
+            <div><li class="dropdown-menu" onclick="dropSubCategoryMenu(`dormitorio`)">
+                <a href="/dormitorio">dormitorio</a></div>
+            <div><li class="dropdown-menu" onclick="dropSubCategoryMenu(`living`)">
+                <a href="/living">living</a></div>
+            <div><li class="dropdown-menu" onclick="dropSubCategoryMenu(`oficina`)">          
+                <a href="/oficina">oficina</a></div>
         </div>
         <div class="right box">
             <div class="topic">Te encantan nuestras ofertas? Suscribite</div>
