--- a/site/src/views/admin/adminCreate.ejs
+++ b/site/src/views/admin/adminCreate.ejs
@@ -40,7 +40,7 @@
                         <div class="input-form">
                             <label for="description">Descripción: </label>
                             <textarea name="description"
-                                id='description'><%= locals.old && old.productName %></textarea>
+                                id='description'><%= locals.old && old.description %></textarea>
                             <% if(locals.errors && errors.description) { %>
                                 <small class="error">
                                     <%= errors.description.msg %>
@@ -60,10 +60,15 @@
                             <label for="measures">Medidas: </label>
                             <input type="text" name="measures" id='measures'>
                             <small class="error" id="measuresErrors"></small>
+                            <% if(locals.errors && errors.measures) { %>
+                                <small class="error">
+                                    <%= errors.measures.msg %>
+                                </small>
+                                <% } %>
                         </div>
                         <div class="input-form">
                             <label for="origin">Origen: </label>
-                            <input type="text" name="origin" id='origin' value="<%= locals.old && old.productName %>">
+                            <input type="text" name="origin" id='origin' value="<%= locals.old && old.origin %>">
                             <% if(locals.errors && errors.origin) { %>
                                 <small class="error">
                                     <%= errors.origin.msg %>
