--- a/site/src/views/partials/header.ejs
+++ b/site/src/views/partials/header.ejs
@@ -1,111 +1,4 @@
-<header>
-  <div class="main-header">
-
-    <div class="logo">
-      <a href="http://localhost:3000"><img src="/images/logo/logoimperio.png" alt=""></a>
-    </div>
-
-    <i class="fas fa-bars burguer-menu-icon" onclick="dropMenu()"></i>
-
-    <!-- Menu de navegacion mobil-->
-    <nav class="navigation-bar" id="navigation-bar-mobile">
-
-      <div class="user-icons-mobile">
-        <a href="/users/login"><i class="fas fa-user"></i></a>
-        <a href="/products/cart"><i class="fas fa-shopping-cart"></i></a>
-    </div> 
-
-
-      <!-- elementos del menu (categorias) -->
-      <ul class="menu">
-        <li class="dropdown-menu" onclick="dropSubCategoryMenu(`cocina`)">
-          <a href="/cocina">COCINA</a> 
-          
-        </li>
-        <li class="dropdown-menu" onclick="dropSubCategoryMenu(`comedor`)">
-          <a href="/comedor">COMEDOR</a> 
-          
-        </li>
-        <li class="dropdown-menu" onclick="dropSubCategoryMenu(`dormitorio`)">
-          <a href="/dormitorio">DORMITORIO</a> 
-          
-        <li class="dropdown-menu" onclick="dropSubCategoryMenu(`living`)">
-          <a href="/living">LIVING</a> 
-          
-        <li class="dropdown-menu" onclick="dropSubCategoryMenu(`oficina`)">
-          
-          <a href="/oficina">OFICINA</a>
-        </li>
-      </ul>
-
-    </nav>
-
-    <!-- Menu navegacion escritorio-->
-    <nav class="navigation-bar" id="navigation-bar-desktop">
-      <!--elementos del menu (categorias)-->
-      <ul class="menu">
-        <li class="dropdown-menu" onclick="dropSubCategoryMenu(`cocina`)">
-          <a href="/cocina">COCINA</a> 
-          
-        </li>
-        <li class="dropdown-menu" onclick="dropSubCategoryMenu(`comedor`)">
-          <a href="/comedor">COMEDOR</a> 
-          
-        </li>
-        <li class="dropdown-menu" onclick="dropSubCategoryMenu(`dormitorio`)">
-          <a href="/dormitorio">DORMITORIO</a> 
-          
-        <li class="dropdown-menu" onclick="dropSubCategoryMenu(`living`)">
-          <a href="/living">LIVING</a> 
-          
-        <li class="dropdown-menu" onclick="dropSubCategoryMenu(`oficina`)">
-          
-          <a href="/oficina">OFICINA</a>
-        </li>
-
-      </ul>
-    </nav>
-
-    <!-- Icono del buscador en header mobil-->
-    <div class="search-icon" onclick="dropSearch()">
-      <i class="fas fa-search"></i>
-    </div>
-
-    <!-- Buscador escritorio -->
-    <form action="/searchResult" method="GET" class="search-form-desktop">
-      <div class="search-bar">
-        <input type="text" name="busqueda" placeholder="Buscar producto" id="">
-        <button type="submit"><i class="fas fa-search"></i></button>
-      </div>
-    </form>
-
-    <div class="user-icons-desktop">
-      <div class="dropdown">
-        <% if(typeof session.user != 'undefined') { %>
-          <i class="fas fa-user"><button onclick="myFunction()" class="dropbtn"></button></i><span class="session"></span>
-          <div class="dropdown-content" id="myDropdown">
-            <a href="/users/profile">Mi perfil</a>
-            <a href="/users/logout">Cerrar sesión</a>
-            <% if(session.user.rol === 1) { %>
-              <a href="/admin">Admin</a>
-            <% } %>
-          </div>
-        <% } else { %>
-          <a href="/users/login"><i class="fas fa-user"></i></a>
-        <% } %>  
-      </div>
-      <a href="/product/carrito"><i class="fas fa-shopping-cart"></i></a>
-    </div>
-
-
-  </div>
-
-  <nav class="nav_menu">
-    <!--Buscador movil-->
-
-    <form action="#" class="search-form-mobile" id="search">
-      <div class="search-bar">
-        <input type="search" name="busqueda" id="" placeholder="Buscar">
+"input-search" placeholder="Buscar">
         <button type="submit"><i class="fas fa-search"></i></button>
       </div>
     </form>
