cargo api provincias ya funcional en editProfile

--- a/site/src/views/partials/head.ejs
+++ b/site/src/views/partials/head.ejs
@@ -36,6 +36,7 @@
     <script src="/js/carrito.js" defer></script>
     <script src="/js/productDetail.js" defer></script>
     <script src="/js/header-user.js" defer></script>
+    <script src="/js/apiProvincias.js" defer></script>
   
     <title>Muebleria Imperio</title>
 </head>
