--- a/site/src/views/users/editProfile.ejs
+++ b/site/src/views/users/editProfile.ejs
@@ -75,26 +75,17 @@
                             <div class="input-container">
                                 <div class="input-flex">
                                     <label for="">Provincia: </label>
-                                    <select name="province" class="input-select">
+                                    <select name="province" class="input-select" id="provinceList">
                                         <option value="" hidden selected>Elija una provincia</option>
-                                        <option value="laRioja">La Rioja</option>
-                                        <option value="chaco">Chaco</option>
-                                        <option value="cordoba">Córdoba</option>
-                                        <option value="misiones">Misiones</option>
-                                        <option value="chubut">Chubut</option>
+                                        
                                     </select>
                                 </div>
                             </div>
                             <div class="input-container">
                                 <div class="input-flex">
                                     <label for="">Localidad: </label>
-                                    <select name="location" class="input-select">
-                                        <option value="" hidden selected>Elija una localidad</option>
-                                        <option value="localidad1">Localidad1</option>
-                                        <option value="localidad2">Localidad2</option>
-                                        <option value="localidad3">Localidad3</option>
-                                        <option value="localidad4">Localidad4</option>
-                                        <option value="localidad5">Localidad5</option>
+                                    <select name="location" class="input-select" id="citiesList">
+                                        <option value="" hidden selected>Elija una localidad</option>                                        
                                     </select>
                                 </div>
                             </div>
