--- a/site/src/views/users/userProfile.ejs
+++ b/site/src/views/users/userProfile.ejs
@@ -60,7 +60,7 @@
                         <div class="input-container">
                             <div class="input-flex">
                                 <label for="">Localidad: </label>
-                                <p><%= user.province ? user.province : "------" %> </p>
+                                <p><%= user.location ? user.location : "------" %> </p>
                             </div>
                         </div>
                         <div class="input-container">
