--- a/site/src/views/partials/cards.ejs
+++ b/site/src/views/partials/cards.ejs
@@ -14,7 +14,7 @@
                     <span id="off"><%- product.discount !== 0 ? `${product.discount}% OFF Antes $ ${product.price} ` : "" %></p>                    
             </div>
             <div class="button-group">
-                <a href="/product/productDetail/<%= product.id %>" class="detalles">Ver detalles</a>
+                <a href="/product/detail/<%= product.id %>" class="detalles">Ver detalles</a>
                 <a href="#" class="añadir">Añadir al carrito</a>
             </div>
             <div class="star-icons">
