--- a/site/src/views/admin/adminEdit.ejs
+++ b/site/src/views/admin/adminEdit.ejs
@@ -42,7 +42,7 @@
                     <select name="category" id="">
                         <option selected hidden value="">Categoría</option>
                         <% categories.forEach(category => { %>
-                            <option value="<%= category.id %>" <%= locals.old && old.category == category.name ? "selected" : null %> ><%- category.name %></option>
+                            <option value="<%= category.id %>" <%= locals.old && old.category == category.name ? "selected" : category.id == product.categoryId ? "selected" : null %> ><%- category.name %></option>
                         <% }) %>
                     </select>
                 </div>
