--- a/site/src/views/comprar.ejs
+++ b/site/src/views/comprar.ejs
@@ -5,7 +5,7 @@
     <%- include ('partials/header.ejs') %>
     <main class="comprar">
         <div class="comocomprar">
-            <img src="images/varias/comprar.png" alt="imagen cómo comprar">
+            <img src="images/varias/comprar.png" alt="imagen cómo comprar" width="100%">
         </div>
 
     </main>
