--- a/site/src/views/envios.ejs
+++ b/site/src/views/envios.ejs
@@ -5,7 +5,7 @@
     <%- include ('partials/header.ejs') %>
     <main class="envios">
         <div class="comoenvios">
-            <img src="images/varias/envios.jpg" alt="imagen metodo envios">
+            <img src="images/varias/envios.jpg" alt="imagen metodo envios" width="100%">
         </div>
 
     </main>
