--- a/site/public/css/editProfile.css
+++ b/site/public/css/editProfile.css
@@ -21,11 +21,12 @@
 /* form input */
 
 .input-container,
-.buttom-container {
+.button-container {
     display: flex;
     flex-direction: column;
     margin: 1rem 1rem;
     width: 100%;
+    justify-content: center;
 
 }
 span.error-message {
@@ -77,7 +78,7 @@ label {
 
 /*botones*/
 
-.buttom-container, .btn-reset, .btn-edit {
+.button-container, .btn-reset, .btn-edit {
     align-items: center; 
     border: none;
     border-radius: 1rem;
@@ -121,7 +122,7 @@ label {
     box-shadow: -5px -5px 10px rgb(255, 255, 255, 0.7);
     background: linear-gradient(285deg, rgba(255,255,255,0.5) 0%,  rgba(43, 236, 124, 0.5) 50%);
 }
-.buttom-container, .btn-reset, .btn-cancelar {
+.button-container, .btn-reset, .btn-cancelar {
     align-items: center; 
     text-align: center;
     padding: 9Px;
@@ -168,12 +169,14 @@ label {
 
 @media screen and (min-width: 475px) {
     .input-container,
-    .buttom-container{
+    .button-container{
         width: 80%;
 
     }
+    .input-file-container {
+     max-width: 300px;    }
     .form-container {
-        width: 20rem;
+    width: 20rem;
     }
 
 }
@@ -237,7 +240,7 @@ label {
 @media screen and (min-width: 768px) {
   
     .profile .form-container {
-        width: 80%;
+        width: 90%;
     }
 
 }
