--- a/site/src/views/product/productDetail.ejs
+++ b/site/src/views/product/productDetail.ejs
@@ -62,13 +62,13 @@
 
           <div class="social-links">
             <p>Compartir</p>
-            <a href="#">
+            <a href="https://www.facebook.com/aquimuebles" target="_blank">
               <i class="fab fa-facebook"></i>
             </a>
-            <a href="#">
+            <a href="http://www.twitter.com/muebleimperio" target="_blank">
               <i class="fab fa-twitter"></i>
             </a>
-            <a href="#">
+            <a href="https://ar.pinterest.com/" target="_blank">
               <i class="fab fa-pinterest"></i>
             </a>
           </div>
