--- a/site/src/views/dormitorio.ejs
+++ b/site/src/views/dormitorio.ejs
@@ -23,8 +23,9 @@
             </div>
       
 
-
+       
       </main>
+      <%- include('partials/botonSubir.ejs') %>
       <%- include('partials/footer.ejs') %>
   </body>
 
