--- a/site/src/views/index.ejs
+++ b/site/src/views/index.ejs
@@ -16,15 +16,19 @@
                   </a>
                 </p>
               </div>
+               
 
               <%- include('partials/tarjetitas.ejs') %>
-              
+            
+        
+       
+            
             <%- include('partials/sliderofer.ejs') %>  
             </div>
       
-
-
+       
       </main>
+      <%- include('partials/botonSubir.ejs') %>
       <%- include('partials/footer.ejs') %>
   </body>
 
