--- a/site/src/views/admin/adminEdit.ejs
+++ b/site/src/views/admin/adminEdit.ejs
@@ -72,5 +72,6 @@
             </form>
         </div>
     </main>
+    <script src="../../../js/validations/productEditValidator.js"></script>
 </body>
 </html>
