--- a/site/src/views/users/login.ejs
+++ b/site/src/views/users/login.ejs
@@ -28,7 +28,7 @@
                 <% } %>
                 <br>
                   <div class="check">
-                    <input class="RecordarChecbox" type="checkbox" name="Recordar" required>
+                    <input class="RecordarChecbox" type="checkbox" name="Recordar">
                     <label class="Recordar" for="Recordar">Recordarme</label>
                   </div>
                   <input type="submit" role="button" value="Ingresar" class="button button--positionIngresar">
