--- a/site/src/views/comedor.ejs
+++ b/site/src/views/comedor.ejs
@@ -23,7 +23,10 @@
             </div>
       
 
-       
+            <label for="dark-mode" class="dark-mode-button">
+              <input id="dark-mode" type="checkbox" onclick="document.documentElement.classList.toggle('dark-mode') " >
+              Modo Oscuro
+            </label>
       </main>
       <%- include('partials/botonSubir.ejs') %>
       <%- include('partials/footer.ejs') %>
