--- a/site/src/views/contacto.ejs
+++ b/site/src/views/contacto.ejs
@@ -60,6 +60,10 @@
                 </form>
           </div>  
         </div>
+        <label for="dark-mode" class="dark-mode-button">
+          <input id="dark-mode" type="checkbox" onclick="document.documentElement.classList.toggle('dark-mode') " >
+          Modo Oscuro
+        </label>
       
       </body>
     <%- include ('partials/footer.ejs') %>    
