--- a/site/src/views/index.ejs
+++ b/site/src/views/index.ejs
@@ -26,6 +26,11 @@
             <%- include('partials/sliderofer.ejs') %>  
             </div>
       
+
+      <label for="dark-mode" class="dark-mode-button">
+        <input id="dark-mode" type="checkbox" onclick="document.documentElement.classList.toggle('dark-mode') " >
+        Modo Oscuro
+      </label>
        
       </main>
       <%- include('partials/botonSubir.ejs') %>
