link al mail del footer funcional

--- a/site/src/views/partials/footer.ejs
+++ b/site/src/views/partials/footer.ejs
@@ -14,7 +14,7 @@
                     <a href="#"><i class="fas fa-phone-volume"></i>+54 11xxxxxxx</a>
                 </div>
                 <div class="email">
-                    <a href="#"><i class="fas fa-envelope"></i>mimperiosuscrip@gmail.com</a>
+                    <a href="mailto:mimperiosuscrip@gmail.com"><i class="fas fa-envelope"></i>mimperiosuscrip@gmail.com</a>
                 </div>
             </div>
         </div>
