--- a/site/src/views/partials/head.ejs
+++ b/site/src/views/partials/head.ejs
@@ -31,13 +31,18 @@
     <meta name="theme-color" content="#ffffff">
   
     <!-- Scripts Locales -->
-    
+    <script src="/js/three.js"></script>
+    <script src="/js/TweenMax.min.js"></script>
+    <script src="/js/bas.js"></script>
+    <script src="/js/OrbitControls.js"></script>
+    <script src="/js/lib-particle.js"></script>
     <script src="/js/header.js" defer></script>
     <script src="/js/carousel.js" defer></script>
     <script src="/js/carrito.js" defer></script>
     <script src="/js/productDetail.js" defer></script>
     <script src="/js/header-user.js" defer></script>
     <script src="/js/apiProvincias.js" defer></script>
+    <script src="/js/search.js"></script>
     
 
     <title>Muebleria Imperio</title>
