--- a/site/src/views/searchResult.ejs
+++ b/site/src/views/searchResult.ejs
@@ -13,12 +13,12 @@
                         <div class="product">
                             <a href="/products/detail/<%- product.id %>">
                                 <div class="productDiscount"><%- product.discount %>% OFF</div>
-                                <img src="/images/productos/<%- product.productImages[0].image%>" alt="">
+                                <img src="/images/productos/<%- product.ProductImg[0].image%>" alt="">
                                 <p class="productName"> 
                                     <% if (product.name.length > 30) { %>
                                         <%- `${product.name.slice(0,30)}...` %>
                                     <% } else { %>
-                                        <%= product.name %>
+                                        <%= product.productName %>
                                     <% } %></p>
                                 <h4 class="productPrice">$<%- product.price %></h4>
                             </a>
