--- a/site/src/views/admin/adminIndex.ejs
+++ b/site/src/views/admin/adminIndex.ejs
@@ -3,7 +3,6 @@
     <%- include ('../admin/adminHead.ejs') %>
 <body>
     <%- include ('../admin/adminHeader.ejs') %>
-    <% if (typeof session.user != "undefined") { %>
-        <h5><%= session.user.nombre %> </h5>
+    <h2>Bienvenido Admin</h2>
 </body>
 </html>
