--- a/site/src/views/admin/adminHeader.ejs
+++ b/site/src/views/admin/adminHeader.ejs
@@ -3,6 +3,7 @@
         <h4><a href="/admin">Mueblería Imperio Admin</a></h4>
         <ul>
             <li class="admin-li"><a href="/admin/products">Productos</a></li>
+            <li class="admin-li"><a href="/admin/categories">Categorias</a></li>
             <li class="admin-li"><a href="http://localhost:3000">Tienda</a></li>
         </ul>
     </nav>
