--- a/site/src/views/index.ejs
+++ b/site/src/views/index.ejs
@@ -23,7 +23,7 @@
         
        
             
-            <%- include('partials/bannercosmico.ejs') %>  
+           <%- include('partials/sliderofer.ejs') %>    
             </div>
       
 
